flux/trusted/pi-hole/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pi-hole
  labels:
    network-zone: trusted
    # Pi-hole requires CHOWN, SYS_NICE capabilities and runs as root
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
